[gd_scene load_steps=6 format=3 uid="uid://o5dyjipitmjr"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_aeoq7"]
[ext_resource type="Texture2D" uid="uid://dg17228ash2qc" path="res://main_menu_assets/Background.png" id="2_o4rx6"]

[sub_resource type="Animation" id="Animation_7glaf"]
resource_name = "Fade in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate 0")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_qeesd"]
resource_name = "Fade out"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j8y5j"]
_data = {
"Fade in": SubResource("Animation_7glaf"),
"Fade out": SubResource("Animation_qeesd")
}

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aeoq7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 937.0
offset_bottom = 655.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_o4rx6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -68.0
offset_right = 71.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AudioButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Audio Settings"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Control Settings"

[node name="GraphicsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Graphics Settings"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j8y5j")
}
speed_scale = 0.0

[node name="SettingsContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
